<resources>
    <string name="app_name">OpenMic Client</string>
    <string name="intro_first_slide_title">Welcome to OpenMic Client!</string>
    <string name="intro_first_slide_description">This is app that allows you to connect to any OpenMic Server, so you can use microphone from your phone as virtual microphone on your PC!</string>
    <string name="intro_permission_slide_title">Before we start…</string>
    <string name="intro_permission_slide_description">In order to use this phone as microphone in PC you need to… give us permission to use microphone on your phone!</string>
    <string name="intro_permission_bt_slide_title">…one more thing!</string>
    <string name="intro_permission_bt_slide_description">Android permissions sometimes can be weird, but in order to use Bluetooth in this app you need to give us permission to localization and devices nearby. Don\'t worry, it\'s optional - if you decline these permissions you will lose ability to connect to PC via Bluetooth. Wi-Fi and USB connections will still work fine!</string>
    <string name="intro_almost_ready_slide_title">Almost ready!</string>
    <string name="intro_almost_ready_slide_description">Now you can connect to OpenMic Server and start using your phone as microphone in PC! If you haven\'t done that already, download and install OpenMic Server on your computer.</string>
    <string name="intro_open_source_slide_title">Crafted with ❤️</string>
    <string name="intro_open_source_slide_description">Application you are using is completely free and open source! It\'s community oriented project, so any contributions are welcome!</string>
    <string name="intro_foss_slide_title">You\'re using FOSS version</string>
    <string name="intro_foss_slide_description">This version of OpenMic Client does not contain any closed-source code, it doesn\'t provide useful analytics to developer and does not contain ads.  Instead of watching annoying ads - make an donation 😊 if you find this app useful or if you make any professional use. Thanks!</string>
    <string name="action_settings">Settings</string>
    <string name="action_donate">Donate to Author</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_faq">FAQ</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_about">About</string>
    <string name="action_tac">Terms &amp; Conditions</string>
    <string name="start_fragment_title">Let\'s get started!</string>
    <string name="start_fragment_description">Please select how you want to connect with PC</string>
    <string name="start_fragment_section_wired">Wired</string>
    <string name="start_fragment_section_wireless">Wireless</string>
    <string name="start_fragment_wired_usb">USB</string>
    <string name="start_fragment_wireless_wifi">Wi-Fi</string>
    <string name="start_fragment_wireless_bluetooth">Bluetooth</string>
    <string name="start_fragment_status_initializing">Initializing…</string>
    <string name="start_fragment_status_usb_not_connected">Your phone is not connected to any USB device</string>
    <string name="start_fragment_status_usb_connected_no_server">OpenMic Server seems to not be running on connected USB device</string>
    <string name="start_fragment_status_usb_checking">Checking if OpenMic Server is running on connected USB device…</string>
    <string name="start_fragment_status_usb_ready">Your phone is connected to USB device with OpenMic Server running</string>
    <string name="start_fragment_status_usb_no_permissions">This app does not have required permission (Access to Internet) to use USB connection method</string>
    <string name="start_fragment_status_wifi_not_ready">Your phone is not connected to any Wi-Fi network</string>
    <string name="start_fragment_status_wifi_ready">Phone is connected to Wi-Fi network, you can now find servers running in this network</string>
    <string name="start_fragment_status_wifi_no_permissions">This app does not have required permission (Access to Internet) to use Wi-Fi connection method</string>
    <string name="start_fragment_status_bt_not_ready">Bluetooth is either not available or not enabled on this device!</string>
    <string name="start_fragment_status_bt_ready">Bluetooth is enabled on this device, you can now select devices you want to connect to</string>
    <string name="start_fragment_status_bt_no_permissions">This app does not have required permission (Bluetooth/Localization) to use Bluetooth connection method</string>
    <string name="start_fragment_icon_connection_status">Connection Status</string>
    <string name="connecting_fragment_title">Connecting to PC…</string>
    <string name="connecting_fragment_description">This should not take long…</string>
    <string name="connecting_fragment_disconnect_connecting_action">We are still trying to connect to your PC!</string>
    <string name="connecting_fragment_disconnect_connecting_action_description">Do you really want to cancel connection attempt?</string>
    <string name="connecting_fragment_disconnect_connecting_action_yes">Yes</string>
    <string name="connecting_fragment_disconnect_connecting_action_no">No</string>
    <string name="connecting_fragment_disconnect_action">Do you really want to disconnect from %1$s?</string>
    <string name="connecting_fragment_disconnect_action_yes">Yes</string>
    <string name="connecting_fragment_disconnect_action_no">No</string>
    <string name="connected_fragment_title">We can hear you!</string>
    <string name="connected_fragment_description">Now we\'re transmitting your beautiful voice to your PC!</string>
    <string name="connected_fragment_btn_disconnect">Disconnect</string>
    <string name="connected_fragment_btn_mute">Mute</string>
    <string name="connected_fragment_btn_unmute">Unmute</string>
    <string name="connected_fragment_volume_slider_title">Volume</string>
    <string name="disconnecting_fragment_title">Disconnecting from PC…</string>
    <string name="disconnecting_fragment_description">This should not take long…</string>
    <string name="wifi_server_select_fragment_title">Select Server</string>
    <string name="wifi_server_select_fragment_description">Please select server you want to connect to</string>
    <string name="wifi_server_select_fragment_looking_for_servers">Looking for servers…</string>
    <string name="wifi_server_placeholder">Server version</string>
    <string name="wifi_server_connect">Connect to this server</string>
    <string name="bt_device_select_fragment_title">Select Device</string>
    <string name="bt_device_select_fragment_description">Please select device you want to connect to</string>
    <string name="bt_device_select_fragment_looking_for_servers">Looking for devices…</string>
    <string name="bt_device_placeholder">Device</string>
    <string name="bt_device_connect">Connect to this device</string>
    <string name="bt_connector_failed_to_start_discovery">Failed to start bluetooth discovery, aborting…</string>
    <string name="bt_connector_failed_to_connect">Failed to create bluetooth socket, probably OpenMic Server is not running on target device!</string>
    <string name="bt_connector_failed_to_connect_title">Bluetooth error!</string>
    <string name="dialog_srverr_title">Oh no! Server returned error</string>
    <string name="dialog_srverr_btn_ok">OK</string>
    <string name="dialog_auth_title">Please enter code you see on your computer screen</string>
    <string name="dialog_auth_btn_ok">Verify</string>
    <string name="dialog_auth_btn_cancel">Cancel</string>
    <string name="dialog_disconnect_title">Disconnected from server</string>
    <string name="dialog_disconnect_btn_ok">OK</string>
    <string name="dialog_disconnect_auth_dismissed">You dismissed Authentication Dialog and have been disconnected from server</string>
    <string name="dialog_disconnect_no_reason">Server did not give reason for disconnect</string>
    <string name="dialog_disconnect_unknown_error">Server returned unknown error (%1$s)</string>
    <string name="dialog_failed_to_connect">Failed to connect (Unknown Error)</string>
    <string name="dialog_client_cfg_error_title">Server does not support client audio settings</string>
    <string name="dialog_client_cfg_invalid_title">Your phone doesn\'t support selected settings</string>
    <string name="dialog_server_cfg_error_title">Client does not support audio settings requested by server</string>
    <string name="dialog_cfg_error">Unfortunately we cannot continue, please correct client and/or server settings</string>
    <string name="dialog_cfg_btn_ok">OK</string>
    <string name="dialog_internal_error_title">Internal Client Error</string>
    <string name="dialog_internal_error_desc">Whoops! Something bad happened while we were trying to read server message. You are now disconnected from server.</string>
    <string name="dialog_internal_error_btn_ok">OK</string>
    <string name="audio_service_notification_title">OpenMic is working!</string>
    <string name="audio_service_notification_desc">Currently streaming to: %1$s</string>
    <string name="audio_service_notification_btn_disconnect">Disconnect</string>
    <string name="audio_service_notification_btn_mute">Mute</string>
    <string name="audio_service_notification_btn_unmute">Unmute</string>
    <string name="os_unknown">Unknown</string>
    <string name="os_windows">Windows</string>
    <string name="os_macos">Mac OS</string>
    <string name="os_linux">Linux</string>
    <string name="os_linux_arch">Arch Linux</string>
    <string name="os_linux_debian">Debian</string>
    <string name="os_linux_fedora">Fedora</string>
    <string name="os_linux_manjaro">Manjaro</string>
    <string name="os_linux_mint">Linux Mint</string>
    <string name="os_linux_pop">Pop! OS</string>
    <string name="os_linux_ubuntu">Ubuntu</string>
    <string name="PREFERENCE_APP" translatable="false">OpenMic</string>
    <string name="PREFERENCE_APP_INTRO_SHOWN" translatable="false">intro_shown</string>
    <string name="PREFERENCE_APP_BOOT_AD_LAST_SHOWN" translatable="false">boot_ad_last_shown</string>
    <string name="PREFERENCE_APP_DEVICE_ID" translatable="false">DeviceID</string>
    <string name="PREFERENCE_APP_KNOWN_DEVICES" translatable="false">KnownDevices</string>
    <string name="PREFERENCE_APP_PORT" translatable="false">Port</string>
    <string name="PREFERENCE_APP_AUDIO_SAMPLE_RATE" translatable="false">AudioSampleRate</string>
    <string name="PREFERENCE_APP_AUDIO_CHANNELS" translatable="false">AudioChannels</string>
    <string name="PREFERENCE_APP_AUDIO_FORMAT" translatable="false">AudioFormat</string>
    <string name="PREFERENCE_APP_AUDIO_VOLUME" translatable="false">AudioVolume</string>
    <string name="PREFERENCE_SERVER_APP_NAME" translatable="false">OpenMic Server</string>
    <string name="AD_UNIT_ID_BOOT" translatable="false">ca-app-pub-9830507899812507/4973960935</string>
    <string name="network_header">Network</string>
    <string name="audio_header">Audio</string>
    <string name="port_title">Communication Port</string>
    <string name="channel_title">Audio Channels</string>
    <string name="sample_rate_title">Sample Rate</string>
    <string name="format_title">Audio Format</string>
    <string name="about_author">By Marek Grzyb (@GrzybDev)</string>
    <string name="about_license">Licensed under the <b>MIT License</b></string>
    <string name="about_copyright">Copyright 2022 Marek Grzyb. All Rights Reserved.</string>
    <string name="about_btn_author_website">Author Website</string>
    <string name="about_btn_openmic_website">OpenMic Website</string>
    <string name="about_btn_source_code">Source Code</string>
    <string name="about_social_linkedin">LinkedIn</string>
    <string name="about_social_reddit">Reddit</string>
    <string name="about_social_twitter">Twitter</string>
</resources>